* New 'Debug' hook used by wfDebug() and wfDebugLog()
* (bug 27655) Require token for watching/unwatching pages)
* (bug 28904) (bug 29773) Update jQuery version from 1.4.4 to 1.6.2 (the latest version)
* (bug 29441) Expose CapitalLinks config in JS to allow modules to properly
  handle titles on case-sensitive wikis.
* (bug 29397) Implement mw.Title module in core.
* In MySQL 4.1.9+ with replication enabled, the slave lag should come from
  SHOW SLAVE STATUS instead of SHOW PROCESSLIST.
* Language codes in $wgDummyLanguageCodes are now excluded on localization
  statistics (maintenance/language/transstat.php)
* (bug 29586) Make the (next 200) links on categories link directly to
  the relevant section of the category.
* (bug 29109) Allow the automatic edit summary for redirect creation
  show the first bit of the new redirect page.
* (bug 29723) mw.util.wikiGetlink() now defaults to wgPageName.
* (bug 29680) Add GetDefaultSortkey hook to override the default sortkey.
* (bug 16699) {{#language:}} accepts second parameter to specify the language in
  which the language name is wanted. Coverage depends on the cldr extension.
* (bug 15802) An easy way to look up messages: language qqx which returns
  the message keys.
* (bug 29868) Add support for passing parameters to mw.msg in jquery.localize.
* (bug 29558) $wgMiserMode now disables update.php by default
* AjaxCategories: Easily add, edit or delete categories on article pages.
  Suggests possible categories when typing, all saves are done via AJAX.
  Supports editing of multiple categories and then saving them in one batch.
* $wgAutopromoteOnce was added, allowing for users to be automatically promoted to explicit usergroups.
  If a group is removed from a user via Special:UserRights, it will not automatically be re-added.
  Configuration is similar to $wgAutopromote (see DefaultSettings.php)
* The PerformRetroactiveAutoblock hook was added to allow overriding or complementing 